# fastapi-livechat

./: main.py  pyproject.toml
templates/: chat.html  index.html
