[tool.poetry]
name = "livechat"
version = "0.1.0"
description = ""
authors = ["Dowon Oh <5d1@hits.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.76.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
